# shinjin2022_baseline

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
ML_models/: bow_dic.pkl  random_forest.pkl  svm_bow.pkl  vectorizer.pkl
src/: mlp.py  random_forest.py  svm_bow.py  svm_tfidf.py
src/ML/: random_forest.py  svm_bow.py  svm_tfidf.py  utils.py
src/bert/: dataset.py  models.py  run.py
src/nn/: constants.py  data_loader.py  modeling.py  test.py  train.py  utils.py
