[tool.poetry]
name = "shinjin2022_baseline"
version = "0.1.0"
description = ""
authors = ["nozomu-karai <karai.nozomu.77c@st.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.4.0"
transformers = "3.0.2"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
